[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/player_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/blade/blade.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/player_sprite.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/player_dash_particles.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blade" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DashParticles" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.25
one_shot = true
explosiveness = 0.75
visibility_rect = Rect2( -25, -25, 50, 50 )
local_coords = false
process_material = ExtResource( 5 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "down_idle"
frame = 4
playing = true
script = ExtResource( 4 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashResetTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashResetTimer" to="." method="_on_DashResetTimer_timeout"]
